dynamic changing of html

--- a/popup.html
+++ b/popup.html
@@ -9,7 +9,10 @@
 </head>
 
 <body>
-    <div class="container">
+    <div id="yo2">
+        <p> Not in Airtable </p>
+    </div>
+    <div class="container" id="yo1">
         <div class="left-column">
             <div id="button-column" class="input-column">
                 <div id="options-set-column">
